#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2002				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Jeff Boote
#			Internet2
#
#	Date:		Wed Apr 17 13:37:24 EDT 2002
#
#	Description:	toplevel build for owamp project
#
SUBDIRS = @TOP_BUILD_DIRS@ . owamp owampd owping owdigest powstream
include_HEADERS = owamp/owamp.h
