#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2002				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Jeff Boote
#			Internet2
#
#	Date:		Wed Apr 17 13:37:24 EDT 2002
#
#	Description:	toplevel build for owamp project
#
SUBDIRS = @TOP_BUILD_DIRS@ owamp owampd owping owdigest conf powstream scripts
#SUBDIRS = owamp owampd owping owdigest conf powstream scripts

# uncomment this when we stop using broken automake 1.5
# (then remove from DIST_EXTRA in subdir)
#nobase_include_HEADERS = owamp/owamp.h

#EXTRA_DIST	=		bootstrap
#MAINTAINERCLEANFILES	=	aclocal.m4 Makefile.in configure config.log \
#				config.status
