#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2002				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Anatoly Karp
#			Internet2
#
#	Date:		Fri Oct 18 17:53:58 EDT 2002
#
#	Description:	constructing owamp conf files from templates
#		This doesn't really do this yet - it just provides
#		examples.
noinst_DATA	= owampd.conf owampd.limits owampd.init
EXTRA_DIST	= owampd.conf owampd.rpm.conf owampd.limits owampd.init
