#
#      $Id$
#
#########################################################################
#									#
#			   Copyright (C)  2002				#
#	     			Internet2				#
#			   All Rights Reserved				#
#									#
#########################################################################
#
#	File:		Makefile.am
#
#	Author:		Jeff Boote
#			Internet2
#
#	Date:		Wed Apr 17 15:11:34 EDT 2002
#
#	Description:	libowamp_contrib build description.

INCLUDES			= -I$(top_builddir) -I$(top_srcdir) \
	     			$(I2UTILINCS) -I.

noinst_LIBRARIES		= libowamp_contrib.a
libowamp_contrib_a_SOURCES	= access.c access.h test-hash.c print.c
